--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,18 @@
     </title>
 </head>
 <body>
-    <h1>IPL Dataset visualization</h1>
+    <h1 style="text-align: center">IPL Dataset visualization</h1>
     <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="./app.js"></script>
-    <h1>IPL Dataset visualization</h1>
-    <div id="new-container" style="min-width: 310px; height: 1000px; margin: 0 auto"></div>
+ 
+    <div id="new-container" style="min-width: 310px; height: 1000px; margin: 100px auto"></div>
+
+
+    <div id="new1-container" style="min-width: 310px; height: 600px; margin: 100px auto"></div>
     <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="./app.js"></script>
-    <h1>IPL Dataset visualization</h1>
-    <div id="new1-container" style="min-width: 310px; height: 600px; margin: 0 auto"></div>
+  
+    <div id="eco-container" style="min-width: 310px; height: 600px; margin: 100px auto"></div>
     <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="./app.js"></script>
+
 </body>
